--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   provider: ^6.0.5
   match: ^0.4.1
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies:
   flutter_test:
