--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,10 @@ dependencies:
   path: ^1.8.3
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
-  provider: ^6.0.5
   match: ^0.4.1
   font_awesome_flutter: ^10.4.0
+  get_it: ^7.6.0
+  go_router: ^8.0.3
 
 dev_dependencies:
   flutter_test:
